--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>
-      About
+      Bodybuilding app that helps you track your excercises
     </ion-title>
     <ion-buttons start>
       <button ion-button menuToggle>
@@ -13,8 +13,9 @@
 
 
 <ion-content padding center text-center>
-  <h2> Creator</h2>
-  <p>Aksel Kaya (1601549) </p>   
-  <img src="https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAIdAAAAJGQ4ZjYyZjI2LTZkYjEtNGRmNS1iYzFkLWI3NDkxZjQ2NWY5MQ.jpg"> 
+  <h2> Creators</h2>
+  <p>Aksel Kaya (1601549), Lauri Kankkunen (1602070), Jami Aarnikka (1701436)
+     </p>   
+  <img src="https://cdn.images.express.co.uk/img/dynamic/11/590x/secondary/Gym-workout-1030102.jpg"> 
   </ion-content>
   
