--- a/src/pages/benchpress/activities.html
+++ b/src/pages/benchpress/activities.html
@@ -4,7 +4,7 @@
 <ion-header>
 <ion-navbar color="primary">
   <ion-title>
-    Bodybuilder 9000
+    Benchpress
   </ion-title>
   <ion-buttons start>
     <button ion-button menuToggle>
@@ -17,8 +17,8 @@
 <ion-content padding center text-center>
 
     <br>
-    <h2>Welcome to our supereme bodybuilding app!</h2>
-    <p>Are you ready to get pumped up?
+    <h2>Here you can add entries from your benchpressing exercises</h2>
+    <p>Or you could, if angularfiredatabase would work..
   </p>
-  <img src="https://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/node_responce_image/public/7-things-anybody-can-learn-from-a-bodybuilder-rotator.jpg?itok=3bPbwIku">
+  <img src="http://cdn2.coachmag.co.uk/sites/coachmag/files/styles/insert_main_wide_image/public/2016/07/1-1-bench-press.jpg?itok=bJYGPFGO">
   </ion-content>
