--- a/src/pages/deadlift/extra-curriculum.html
+++ b/src/pages/deadlift/extra-curriculum.html
@@ -4,7 +4,7 @@
 <ion-header>
 <ion-navbar color="primary">
   <ion-title>
-    Bodybuilder 9000
+    Deadlift
   </ion-title>
   <ion-buttons start>
     <button ion-button menuToggle>
@@ -17,8 +17,8 @@
 <ion-content padding center text-center>
 
     <br>
-    <h2>Welcome to our supereme bodybuilding app!</h2>
-    <p>Are you ready to get pumped up?
+    <h2>Here you can add entries from your deadlift exercises</h2>
+    <p>Or you could, if angularfiredatabase would work..
   </p>
-  <img src="https://cdn-mf0.heartyhosting.com/sites/mensfitness.com/files/styles/node_responce_image/public/7-things-anybody-can-learn-from-a-bodybuilder-rotator.jpg?itok=3bPbwIku">
+  <img src="https://www.bodybuilding.com/fun/images/2015/how-to-deadlift-a-beginners-guide-graphics-1.jpg">
   </ion-content>
