--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,8 +2,7 @@
 <ion-tabs [selectedIndex]="myIndex">
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="logo-steam"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Activities" tabIcon="logo-steam"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Contact-Information" tabIcon="logo-steam"></ion-tab>
-  <ion-tab [root]="tab5Root" tabTitle="Extra-Curriculum" tabIcon="logo-steam"></ion-tab>
-  <ion-tab [root]="tab6Root" tabTitle="Targeted-CV" tabIcon="logo-steam"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Benchpress" tabIcon="logo-steam"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Squat" tabIcon="logo-steam"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Deadlift" tabIcon="logo-steam"></ion-tab>
 </ion-tabs>
